--- a/notebook/model.ipynb
+++ b/notebook/model.ipynb
@@ -17,16 +17,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([4, 16, 7])"
+       "UNetBaseline(\n",
+       "  (layers): ModuleList(\n",
+       "    (0): DoubleConv(\n",
+       "      (net): Sequential(\n",
+       "        (0): Conv1D(\n",
+       "          (conv): Conv1d(1, 16, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "          (net): Sequential(\n",
+       "            (0): Conv1d(1, 16, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "            (1): BNN1D(\n",
+       "              (bn1d): BatchNorm1d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "            )\n",
+       "            (2): PReLU(num_parameters=1)\n",
+       "          )\n",
+       "        )\n",
+       "        (1): AttentionLayer(in_channels=16, out_channels=16, key_channels=16)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): Down(\n",
+       "      (net): Sequential(\n",
+       "        (0): DoubleConv(\n",
+       "          (net): Sequential(\n",
+       "            (0): Conv1D(\n",
+       "              (conv): Conv1d(16, 32, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "              (net): Sequential(\n",
+       "                (0): Conv1d(16, 32, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "                (1): BNN1D(\n",
+       "                  (bn1d): BatchNorm1d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "                )\n",
+       "                (2): PReLU(num_parameters=1)\n",
+       "              )\n",
+       "            )\n",
+       "            (1): AttentionLayer(in_channels=32, out_channels=32, key_channels=32)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (2): Down(\n",
+       "      (net): Sequential(\n",
+       "        (0): DoubleConv(\n",
+       "          (net): Sequential(\n",
+       "            (0): Conv1D(\n",
+       "              (conv): Conv1d(32, 64, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "              (net): Sequential(\n",
+       "                (0): Conv1d(32, 64, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "                (1): BNN1D(\n",
+       "                  (bn1d): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "                )\n",
+       "                (2): PReLU(num_parameters=1)\n",
+       "              )\n",
+       "            )\n",
+       "            (1): AttentionLayer(in_channels=64, out_channels=64, key_channels=64)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (3): Down(\n",
+       "      (net): Sequential(\n",
+       "        (0): DoubleConv(\n",
+       "          (net): Sequential(\n",
+       "            (0): Conv1D(\n",
+       "              (conv): Conv1d(64, 128, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "              (net): Sequential(\n",
+       "                (0): Conv1d(64, 128, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "                (1): BNN1D(\n",
+       "                  (bn1d): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "                )\n",
+       "                (2): PReLU(num_parameters=1)\n",
+       "              )\n",
+       "            )\n",
+       "            (1): AttentionLayer(in_channels=128, out_channels=128, key_channels=128)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (4): Down(\n",
+       "      (net): Sequential(\n",
+       "        (0): DoubleConv(\n",
+       "          (net): Sequential(\n",
+       "            (0): Conv1D(\n",
+       "              (conv): Conv1d(128, 256, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "              (net): Sequential(\n",
+       "                (0): Conv1d(128, 256, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "                (1): BNN1D(\n",
+       "                  (bn1d): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "                )\n",
+       "                (2): PReLU(num_parameters=1)\n",
+       "              )\n",
+       "            )\n",
+       "            (1): AttentionLayer(in_channels=256, out_channels=256, key_channels=256)\n",
+       "          )\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (5): Up(\n",
+       "      (upsample): Deconv1D(\n",
+       "        (deconv): ConvTranspose1d(256, 128, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "        (net): Sequential(\n",
+       "          (0): ConvTranspose1d(256, 128, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "          (1): BNN1D(\n",
+       "            (bn1d): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          )\n",
+       "          (2): PReLU(num_parameters=1)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv): DoubleConv(\n",
+       "        (net): Sequential(\n",
+       "          (0): Conv1D(\n",
+       "            (conv): Conv1d(256, 128, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "            (net): Sequential(\n",
+       "              (0): Conv1d(256, 128, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "              (1): BNN1D(\n",
+       "                (bn1d): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "              )\n",
+       "              (2): PReLU(num_parameters=1)\n",
+       "            )\n",
+       "          )\n",
+       "          (1): AttentionLayer(in_channels=128, out_channels=128, key_channels=128)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (6): Up(\n",
+       "      (upsample): Deconv1D(\n",
+       "        (deconv): ConvTranspose1d(128, 64, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "        (net): Sequential(\n",
+       "          (0): ConvTranspose1d(128, 64, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "          (1): BNN1D(\n",
+       "            (bn1d): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          )\n",
+       "          (2): PReLU(num_parameters=1)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv): DoubleConv(\n",
+       "        (net): Sequential(\n",
+       "          (0): Conv1D(\n",
+       "            (conv): Conv1d(128, 64, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "            (net): Sequential(\n",
+       "              (0): Conv1d(128, 64, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "              (1): BNN1D(\n",
+       "                (bn1d): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "              )\n",
+       "              (2): PReLU(num_parameters=1)\n",
+       "            )\n",
+       "          )\n",
+       "          (1): AttentionLayer(in_channels=64, out_channels=64, key_channels=64)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (7): Up(\n",
+       "      (upsample): Deconv1D(\n",
+       "        (deconv): ConvTranspose1d(64, 32, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "        (net): Sequential(\n",
+       "          (0): ConvTranspose1d(64, 32, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "          (1): BNN1D(\n",
+       "            (bn1d): BatchNorm1d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          )\n",
+       "          (2): PReLU(num_parameters=1)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv): DoubleConv(\n",
+       "        (net): Sequential(\n",
+       "          (0): Conv1D(\n",
+       "            (conv): Conv1d(64, 32, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "            (net): Sequential(\n",
+       "              (0): Conv1d(64, 32, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "              (1): BNN1D(\n",
+       "                (bn1d): BatchNorm1d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "              )\n",
+       "              (2): PReLU(num_parameters=1)\n",
+       "            )\n",
+       "          )\n",
+       "          (1): AttentionLayer(in_channels=32, out_channels=32, key_channels=32)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (8): Up(\n",
+       "      (upsample): Deconv1D(\n",
+       "        (deconv): ConvTranspose1d(32, 16, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "        (net): Sequential(\n",
+       "          (0): ConvTranspose1d(32, 16, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "          (1): BNN1D(\n",
+       "            (bn1d): BatchNorm1d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "          )\n",
+       "          (2): PReLU(num_parameters=1)\n",
+       "        )\n",
+       "      )\n",
+       "      (conv): DoubleConv(\n",
+       "        (net): Sequential(\n",
+       "          (0): Conv1D(\n",
+       "            (conv): Conv1d(32, 16, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "            (net): Sequential(\n",
+       "              (0): Conv1d(32, 16, kernel_size=(3,), stride=(2,), padding=(1,))\n",
+       "              (1): BNN1D(\n",
+       "                (bn1d): BatchNorm1d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "              )\n",
+       "              (2): PReLU(num_parameters=1)\n",
+       "            )\n",
+       "          )\n",
+       "          (1): AttentionLayer(in_channels=16, out_channels=16, key_channels=16)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       ")"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +236,7 @@
    "source": [
     "model = UNetBaseline()\n",
     "x = torch.randn(4, 1, 100)\n",
-    "model(x).shape"
+    "model"
    ]
   },
   {
