update unet model and cnn model

--- a/notebook/Results_analysis.ipynb
+++ b/notebook/Results_analysis.ipynb
@@ -16,50 +16,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = np.load(\"../results/ukdale_CNN1D_quantilesresults.npy\", allow_pickle=True).item()"
+    "results = np.load(\"../results 2/ukdale_CNN1Dresults.npy\", allow_pickle=True).item()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = np.load(\"../results 2/ukdale_UNETNiLM_quantilesresults.npy\", allow_pickle=True).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>subACC</th>\n",
+       "      <td>0.3533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>appF1</th>\n",
+       "      <td>[0.0, 0.5811469, 0.11682702, 0.000109295586, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HA</th>\n",
+       "      <td>0.8556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ebF1</th>\n",
+       "      <td>0.1396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>miF1</th>\n",
+       "      <td>0.5329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>maF1</th>\n",
+       "      <td>0.1396</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'kettle':           0.25       10.0       50.0       90.0       97.5\n",
-       " SAE   0.145990   0.109405   0.106794   0.081639   0.101143\n",
-       " MAE  47.202881  35.373825  34.529980  26.396988  32.702774\n",
-       " NDE   0.329701   0.323668   0.319588   0.325350   0.321299,\n",
-       " 'fridge':           0.25       10.0       50.0       90.0       97.5\n",
-       " SAE   0.064979   0.064993   0.064710   0.065030   0.064912\n",
-       " MAE  16.040241  16.042889  15.978711  16.052134  16.024811\n",
-       " NDE   0.016018   0.016028   0.015971   0.016022   0.016013,\n",
-       " 'dishwasher':           0.25       10.0       50.0       90.0       97.5\n",
-       " SAE   0.140158   0.137722   0.142445   0.134593   0.139615\n",
-       " MAE  10.073543  10.121686  10.030226  10.192024  10.091051\n",
-       " NDE   0.088917   0.088610   0.089189   0.088192   0.088869,\n",
-       " 'washingmachine':           0.25       10.0       50.0      90.0       97.5\n",
-       " SAE   0.075100   0.075035   0.075013   0.07523   0.074977\n",
-       " MAE  27.773315  27.751133  27.743912  27.81164  27.728970\n",
-       " NDE   0.075995   0.075989   0.076067   0.07596   0.076062,\n",
-       " 'microwave':           0.25       10.0       50.0       90.0       97.5\n",
-       " SAE   0.066289   0.066467   0.066348   0.065997   0.066430\n",
-       " MAE  21.303566  21.358660  21.321951  21.210501  21.352106\n",
-       " NDE   0.145455   0.145138   0.146104   0.145683   0.144431}"
+       "                                                        0\n",
+       "subACC                                             0.3533\n",
+       "appF1   [0.0, 0.5811469, 0.11682702, 0.000109295586, 0.0]\n",
+       "HA                                                 0.8556\n",
+       "ebF1                                               0.1396\n",
+       "miF1                                               0.5329\n",
+       "maF1                                               0.1396"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results['reg_results']"
+    "results['mlabel_results']"
    ]
   },
   {
