--- a/notebook/Untitled.ipynb
+++ b/notebook/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,15 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Load training data\n"
-     ]
+     "name": "stdout",
+     "text": "Load training data\n"
     }
    ],
    "source": [
@@ -41,6 +41,46 @@
    "outputs": [],
    "source": [
     "p = np.load(\"../data/ukdale/training/powers.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_type=\"training\"\n",
+    "data_path=\"../../data/UKDALE/\"\n",
+    "data = pd.read_csv(f\"{data_path}ukdale_house_1_{data_type}.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = {'fridge freezer':'fridge', 'washer dryer':'washingmachine', 'dish washer':'dishwasher', 'kettle':'kettle', 'microwave':'microwave'}\n",
+    "data.rename(columns, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "             fridge  washingmachine    dishwasher        kettle     microwave\ncount  1.583397e+06    1.583397e+06  1.583397e+06  1.583397e+06  1.583397e+06\nmean   4.034609e+01    4.054419e+01  2.297803e+01  1.923658e+01  1.262959e+01\nstd    5.338638e+01    2.473060e+02  2.185563e+02  2.059316e+02  1.319137e+02\nmin    0.000000e+00    0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00\n25%    0.000000e+00    0.000000e+00  1.000000e+00  1.000000e+00  1.000000e+00\n50%    0.000000e+00    0.000000e+00  1.000000e+00  1.000000e+00  1.000000e+00\n75%    8.800000e+01    0.000000e+00  1.000000e+00  1.000000e+00  1.000000e+00\nmax    1.856000e+03    3.956000e+03  3.057000e+03  3.629000e+03  3.180000e+03",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fridge</th>\n      <th>washingmachine</th>\n      <th>dishwasher</th>\n      <th>kettle</th>\n      <th>microwave</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>1.583397e+06</td>\n      <td>1.583397e+06</td>\n      <td>1.583397e+06</td>\n      <td>1.583397e+06</td>\n      <td>1.583397e+06</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>4.034609e+01</td>\n      <td>4.054419e+01</td>\n      <td>2.297803e+01</td>\n      <td>1.923658e+01</td>\n      <td>1.262959e+01</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>5.338638e+01</td>\n      <td>2.473060e+02</td>\n      <td>2.185563e+02</td>\n      <td>2.059316e+02</td>\n      <td>1.319137e+02</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000e+00</td>\n      <td>0.000000e+00</td>\n      <td>0.000000e+00</td>\n      <td>0.000000e+00</td>\n      <td>0.000000e+00</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>0.000000e+00</td>\n      <td>0.000000e+00</td>\n      <td>1.000000e+00</td>\n      <td>1.000000e+00</td>\n      <td>1.000000e+00</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>0.000000e+00</td>\n      <td>0.000000e+00</td>\n      <td>1.000000e+00</td>\n      <td>1.000000e+00</td>\n      <td>1.000000e+00</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>8.800000e+01</td>\n      <td>0.000000e+00</td>\n      <td>1.000000e+00</td>\n      <td>1.000000e+00</td>\n      <td>1.000000e+00</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>1.856000e+03</td>\n      <td>3.956000e+03</td>\n      <td>3.057000e+03</td>\n      <td>3.629000e+03</td>\n      <td>3.180000e+03</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "data[list(columns.values())].describe()"
    ]
   },
   {
@@ -351,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.7-final"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
